sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: illegal start of simple expression
		var x = getValeur(i);
                ^AlgInsertionSort:29: error: Unmatched closing brace '}' ignored here
}
^