sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	for (i<-1 to getNombreValeurs()-1)
		var x = getValeur(i);
		var j = i ; 
		while (j>0 && getValeur(j) > x ){
			setValeur(j,getValeur(j-1));
			j -=1;
		}
		setValeur(j,x) ; 
	}
}


/*procédure tri_insertion(tableau T, entier n)
      pour i de 1 à n-1
          x ← T[i]
          j ← i
          tant que j > 0 et T[j - 1] > x
              T[j] ← T[j - 1]
              j ← j - 1
          fin tant que
          T[j] ← x
     fin pour
  fin procédure 
*/